--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,10 +1,6 @@
-<h2>Reporter output</h2><table><tr><td>Sleeping ... zZz 4<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (0ad71964207d49097455967827b3e49b)] -> link text: Forgot ID/Password?] ---> Actual text : Forgot ID/Password?. Expected text : Forgot ID/Password?<br></td></tr>
-<tr><td>Proxy element for: DefaultElementLocator 'By.linkText: Forgot ID/Password?'<---------> has been clicked<br></td></tr>
-<tr><td>123666 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (0ad71964207d49097455967827b3e49b)] -> id: acctNumber]<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>2345 <-----> has been put into <-----> [[ChromeDriver: chrome on windows (0ad71964207d49097455967827b3e49b)] -> xpath: //input[@name='ssNumberField']]<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
-<tr><td>[[ChromeDriver: chrome on windows (0ad71964207d49097455967827b3e49b)] -> id: verifyCustomerAccount]<---------> has been clicked<br></td></tr>
-<tr><td>Sleeping ... zZz 3<br></td></tr>
+<h2>Reporter output</h2><table><tr><td>[[ChromeDriver: chrome on windows (983260415cc9686b81950bad4fc26a20)] -> xpath: //span[text()='Home Loans']//parent::a[@id='navHomeLoans']]<---------> has been clicked<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (983260415cc9686b81950bad4fc26a20)] -> xpath: //span[text()='Explore home loans']] ---> Actual text : Explore home loans. Expected text : Explore home loans<br></td></tr>
+<tr><td>[[ChromeDriver: chrome on windows (983260415cc9686b81950bad4fc26a20)] -> link text: Mortgage]<---------> has been clicked<br></td></tr>
+<tr><td>Current URL is : https://www.bankofamerica.com/mortgage/home-mortgage/<br></td></tr>
+<tr><td>Proxy element for: DefaultElementLocator 'By.id: applyNow'<---------> has been clicked<br></td></tr>
 </table>
