--- a/test-output/extent_report.html
+++ b/test-output/extent_report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Bank of America Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 29, 2023 06:42:55 PM</span></a>
+<a href="#"><span class="badge badge-primary">Dec 30, 2023 02:42:21 PM</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">homeLoanValidationTest</p>
             <p class="text-sm">
-              <span>6:42:55 PM</span> / <span>00:00:51:225</span>
+              <span>2:42:21 PM</span> / <span>00:01:53:477</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">homeLoanValidationTest</h5>
-<span class='badge badge-success'>12.29.2023 6:42:55 PM</span>
-<span class='badge badge-danger'>12.29.2023 6:43:46 PM</span>
-<span class='badge badge-default'>00:00:51:225</span>
+<span class='badge badge-success'>12.30.2023 2:42:21 PM</span>
+<span class='badge badge-danger'>12.30.2023 2:44:15 PM</span>
+<span class='badge badge-default'>00:01:53:477</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -117,42 +117,301 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>6:43:02 PM</td>
+        <td>2:42:29 PM</td>
         <td>
-          [[ChromeDriver: chrome on windows (983260415cc9686b81950bad4fc26a20)] -> xpath: //span[text()='Home Loans']//parent::a[@id='navHomeLoans']]<---------> has been clicked
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //span[text()='Home Loans']//parent::a[@id='navHomeLoans']]<---------> has been clicked
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>6:43:03 PM</td>
+        <td>2:42:29 PM</td>
         <td>
-          [[ChromeDriver: chrome on windows (983260415cc9686b81950bad4fc26a20)] -> xpath: //span[text()='Explore home loans']] ---> Actual text : Explore home loans. Expected text : Explore home loans
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //span[text()='Explore home loans']] ---> Actual text : Explore home loans. Expected text : Explore home loans
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>6:43:05 PM</td>
+        <td>2:42:30 PM</td>
         <td>
-          [[ChromeDriver: chrome on windows (983260415cc9686b81950bad4fc26a20)] -> link text: Mortgage]<---------> has been clicked
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> link text: Mortgage]<---------> has been clicked
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>6:43:05 PM</td>
+        <td>2:42:30 PM</td>
         <td>
           Current URL is : https://www.bankofamerica.com/mortgage/home-mortgage/
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>6:43:26 PM</td>
+        <td>2:42:33 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:42:33 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: applyNow]<---------> is Displayed, true
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:42:54 PM</td>
         <td>
           Proxy element for: DefaultElementLocator 'By.id: applyNow'<---------> has been clicked
         </td>
       </tr>
       <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:42:54 PM</td>
+        <td>
+          Current URL is : https://secure.bankofamerica.com/digital-mortgage-application/landing/#landing
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:42:57 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:42:57 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: dmaFlowButton]<---------> is Displayed, true
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:18 PM</td>
+        <td>
+          Proxy element for: DefaultElementLocator 'By.id: dmaFlowButton'<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:21 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:21 PM</td>
+        <td>
+          Current URL is : https://secure.bankofamerica.com/digital-mortgage-application/mortgage/#purchase-gating-question
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:21 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: propertyContractYes]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:24 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:25 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: isBofaCustomer-no]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:28 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:29 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: signInContinueButton]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:29 PM</td>
+        <td>
+          Current URL is : https://secure.bankofamerica.com/digital-mortgage-application/mortgage/#bac-sign-in
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:29 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //span[text()='Your information']]<---------> is Displayed, false
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:32 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:34 PM</td>
+        <td>
+          Sleeping ... zZz 2
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:34 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //input[@class='first-name-field spa-input-text']] ---> We can Enter : 32 Character in the field which was similar with the Expected as: 32
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:34 PM</td>
+        <td>
+          The Text from the [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //input[@class='first-name-field spa-input-text']] ---> is cleared
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:36 PM</td>
+        <td>
+          Sleeping ... zZz 2
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:36 PM</td>
+        <td>
+          Dilshad <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //input[@class='first-name-field spa-input-text']] and then clicked by Tab Key
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:38 PM</td>
+        <td>
+          Sleeping ... zZz 2
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:38 PM</td>
+        <td>
+          DAZ <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: middleName] and then clicked by Tab Key
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:41 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:42 PM</td>
+        <td>
+          Zannat <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: lastName] and then clicked by Tab Key
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:45 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:45 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: suffix]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:45 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //option[text()='Sr']]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:47 PM</td>
+        <td>
+          Sleeping ... zZz 2
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:47 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: phoneNumber]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:47 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: phoneType]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:47 PM</td>
+        <td>
+          [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> xpath: //option[text()='Mobile']]<---------> has been clicked
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:50 PM</td>
+        <td>
+          Sleeping ... zZz 3
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:51 PM</td>
+        <td>
+          shshsh@gmail.com <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: email] and then clicked by Tab Key
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:53 PM</td>
+        <td>
+          Sleeping ... zZz 2
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:53 PM</td>
+        <td>
+          45 Southwest 9th Street <-----> has been put into <-----> [[ChromeDriver: chrome on windows (669ffae7cc0ba6c38c0883c85f2ae018)] -> id: locationField]
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>2:43:55 PM</td>
+        <td>
+          Sleeping ... zZz 2
+        </td>
+      </tr>
+      <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>6:43:46 PM</td>
+        <td>2:44:15 PM</td>
         <td>
           Test FAILED
         </td>
@@ -203,7 +462,7 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>18:42:55 PM</td>
+<td>14:42:21 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>homeLoanValidationTest</a>
 </td>
@@ -225,13 +484,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 29, 2023 06:42:55 PM</h3>
+<h3>Dec 30, 2023 02:42:21 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 29, 2023 06:43:47 PM</h3>
+<h3>Dec 30, 2023 02:44:15 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -284,8 +543,8 @@
 <div class="card-footer">
 <div><small data-tooltip='0%'><b>0</b> events passed</small></div>
 <div>
-<small data-tooltip='16%'><b>1</b> events failed,
-<b data-tooltip='%'>5</b> others
+<small data-tooltip='2%'><b>1</b> events failed,
+<b data-tooltip='%'>42</b> others
 </small>
 </div>
 </div>
@@ -301,7 +560,7 @@
 </div></div>
 <script>
 var timeline = {
-"homeLoanValidationTest":51.225
+"homeLoanValidationTest":113.477
 };
 </script>
 <div class="row">
@@ -378,7 +637,7 @@ passEvents: 0,
 failEvents: 1,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 5
+infoEvents: 42
 };
 </script>        </div>
       </div>
